--- a/src/views/_footer.ejs
+++ b/src/views/_footer.ejs
@@ -2,7 +2,7 @@
 <hr>
 <footer class="page-footer font-small blue">
 
-    <div class="footer-copyright text-center py-3" style="color: #737e87;">© 2020 Copyright: Rafa - Wilyer - Elimer
+    <div style="color: #737e87" class="footer-copyright text-center py-3">© 2020 Copyright: Rafa - Wilyer - Elimer
     </div>
 
 </footer>
