--- a/src/views/_header.ejs
+++ b/src/views/_header.ejs
@@ -6,30 +6,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BLOG</title>
-</head>
 
-<style>
-  .nav{
-    background: #f5f5f6;
-  }
-  .nav-link{
-    color: #4693d6;
-    font-weight: 600;
-  }
-</style>
+  <style>
+    .nav{
+      background: #ee5544;
+    }
+    .nav-link{
+      color: white;
+      font-weight: 600;
+    }
+    .nav-link:hover{
+      color: black;
+    }
+    #titulo{
+      color: white;
+      font-weight: 600;
+    }
+    #titulo:hover{
+      color: black;
+    }
+    #titulo img{
+      height: 30px;
+      width: 30px;
+      margin-right: 15px;
+    }
+  </style>
+
+</head>
 
 <body>
 
-  <ul class="nav">
-    <li class="nav-item">
-        <a id="titulo" class="nav-link active" href="#">Blog</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/inicio">Inicio</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/crear">Crear</a>
-    </li>
-</ul>
+  <nav class="navbar navbar-light nav">
+    <div class="container">
+      <a  id="titulo" class="navbar-brand" href="/inicio">
+        <img src="https://i.imgur.com/KnJSA4E.png" alt="" width="30" height="24">
+      Blog</a>
+
+      <ul class="nav">
+        
+        <li class="nav-item">
+            <a class="nav-link" href="/inicio">Inicio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/crear">Crear</a>
+        </li>
+    </ul>
+    </div>
+
+
+    
+  </nav>
+
+
+  
 
 
