--- a/src/views/editar.ejs
+++ b/src/views/editar.ejs
@@ -3,29 +3,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <body>
     <style>
       body {
-        background: rgb(245, 245, 245);
+        background: linear-gradient(29deg, rgba(227, 227, 227, 1) 0%, rgba(255, 255, 255, 1) 100%);
       }
-      .h1{
-       color: #ee5544;
-      }
-      #enviar{
-    background: #ee5544;
-    border: none;
-  }
-  #enviar:hover{
-    background: #eb3420;
-    border: none;
-  }
-
-  body {
-        background: rgb(245, 245, 245);
-      }
-    
     </style>
-
-  <body>
 
     <div class="container px-5 my-5">
       <div class="row justify-content-center">
@@ -33,26 +16,27 @@
           <div class="card border-0 rounded-3 shadow-lg">
             <div class="card-body p-4">
               <div class="text-center">
-                <div class="h1 fw-light">Nuevo Articulo</div>
-                <p class="mb-4 text-muted">Ingrese aqui la información de su articulo</p>
+                <div class="h1 fw-light">Editar el Articulo</div>
+                <h2>"<%= doc.titulo %>"</h2>
+                <p class="mb-4 text-muted">Ingrese aqui la información a editar del articulo</p>
               </div>
 
-              <form action="/crear" method="post">
+              <form action="/modificar/<%= doc._id %>" method="post">
                 <div class="form-floating mb-3">
                   <label>Titulo</label>
-                  <input class="form-control" name="titulo" type="text" placeholder="Ingresar el titulo del articulo" />
+                  <input class="form-control" name="titulo" type="text" placeholder="Ingresar el titulo del articulo" value="<%= doc.titulo %>" />
                 </div>
                 <div class="form-floating mb-3">
                   <label>Link Imagen</label>
-                  <input class="form-control" name="url" type="text" placeholder="Ingresar el link de la imagen" />
+                  <input class="form-control" name="url" type="text" placeholder="Ingresar el link de la imagen" value="<%= doc.url %>"/>
                 </div>
                 <div class="form-floating mb-3">
                   <label>Autor</label>
-                  <input class="form-control" name="autor" type="text" placeholder="Ingresar el autor del articulo" />
+                  <input class="form-control" name="autor" type="text" placeholder="Ingresar el autor del articulo" value="<%= doc.autor %>"/>
                 </div>
                 <div class="form-floating mb-3">
                   <label>Fecha de Publicacion</label>
-                  <input class="form-control" name="fecha" type="date" placeholder="Ingresar la fecha de publicacion" />
+                  <input class="form-control" name="fecha" type="date" placeholder="Ingresar la fecha de publicacion" value="<%= doc.fecha %>"/>
                 </div>
                 <div class="form-floating mb-3">
                   <label>Categoria</label>
@@ -65,25 +49,25 @@
                 </div>
                 <div class="form-floating mb-3">
                   <label>Etiqueta</label>
-                  <input class="form-control" name="etiqueta" type="text" placeholder="Ingresar las etiquetas del articulo" />
+                  <input class="form-control" name="etiqueta" type="text" placeholder="Ingresar las etiquetas del articulo" value="<%= doc.etiqueta %>"/>
                 </div>
                 <div class="form-floating mb-3">
                   <label>Contenido</label>
                   <textarea class="form-control" name="texto" type="text" style="height: 10rem;"
-                    placeholder="Ingresar el contenido del articulo"></textarea>
+                    placeholder="Ingresar el contenido del articulo"><%= doc.texto %></textarea>
                 </div>
                 <div class="d-grid">
-                  <button class="btn btn-danger btn-lg" id="enviar" type="submit">Enviar</button>
+                  <button class="btn btn-warning btn-lg " id="enviar" type="submit">Enviar</button>
+                  <a href="/modificar/eliminar/<%= doc._id %>" class="btn btn-danger btn-lg">Eliminar Articulo</a>
                 </div>
               </form>
-
 
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    
   </body>
 
   </html>
